# kokkos

./: Makefile.kokkos  Makefile.targets
benchmarks/atomic/: main.cpp
benchmarks/deep_copy/: Makefile  main.cpp
benchmarks/launch_latency/: Makefile  launch_latency.cpp  main.cpp
cmake/: KokkosCore_config.h.in  kokkos_arch.cmake  kokkos_enable_devices.cmake  kokkos_enable_options.cmake  kokkos_tpls.cmake  kokkos_tribits.cmake
containers/src/: Kokkos_DynRankView.hpp  Kokkos_UnorderedMap.hpp
containers/src/impl/: Kokkos_Bitset_impl.hpp
containers/unit_tests/: CMakeLists.txt  TestWithoutInitializing.hpp
core/src/: CMakeLists.txt  Kokkos_Atomic.hpp  Kokkos_Atomics_Desul_Config.hpp  Kokkos_CopyViews.hpp  Kokkos_Core.hpp  Kokkos_Core_fwd.hpp  Kokkos_Crs.hpp  Kokkos_GraphNode.hpp  Kokkos_Kalmar.hpp  Kokkos_Layout.hpp  Kokkos_Macros.hpp  Kokkos_OpenMP.hpp  Kokkos_OpenMPTarget.hpp  Kokkos_ScratchSpace.hpp  Kokkos_Serial.hpp  Kokkos_TaskPolicy.hpp  Kokkos_View.hpp
core/unit_test/: CMakeLists.txt  Makefile  TestAtomic.hpp  TestAtomicViews.hpp  TestAtomics.hpp  TestExecSpacePartitioning.hpp  TestGraph.hpp  TestHalfConversion.hpp  TestIrregularLayout.hpp  TestKalmar.cpp  TestMDSpanConversion.hpp  TestNumericTraits.hpp  TestOther.hpp  TestPolicyConstruction.hpp  TestRange.hpp  TestScan.hpp  TestSerial.cpp  TestTeam.hpp  TestTeamVector.hpp  TestViewIsAssignable.hpp  TestViewMapping_a.hpp  TestViewMapping_subview.hpp  TestViewOfClass.hpp  TestViewSubview.hpp
example/stdexec_prototype/: CMakeLists.txt  hierarchical_sketch.cpp  scheduler.hpp  stdexec.cpp
(+86 files in other folders)
